Revise README for Cosmic Jackaroo project