@@ -1,49 +1,54 @@
-# Jackaroo Game 🎲
+# 🌌 Cosmic Jackaroo 
 
-A JavaFX-based implementation of the **Jackaroo board game** with support for both single-player (CPU) and multiplayer modes.  
-The game includes smooth marble animations, card handling (including special burner/saver cards), and an interactive UI.
+![Java](https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=openjdk&logoColor=white)
+![JavaFX](https://img.shields.io/badge/JavaFX-FF0000?style=for-the-badge&logo=java&logoColor=white)
 
----
+## 🚀 About The Project
 
-## 🚀 Features
-- 🎮 Play against friends or CPU opponents
-- 🃏 Full card deck including special cards
-- ⚡ Animated marble transitions
-- 🎨 Modern JavaFX UI
+**Cosmic Jackaroo** is a space-themed, strategic card-and-marble board game developed as a 4th-semester Computer Science project. It combines the classic mechanics of marble-racing with the deep, tactical strategy of playing cards. 
 
----
+🏆 **Achievement:** This project ranked **4th place overall** out of all software projects developed in the semester cohort!
 
-## 📦 Installation
+Instead of rolling dice, players use a deck of cards to navigate their marbles out of their home base, around a galactic track, and safely into their designated Safe Zone. But beware—the track is filled with traps, Fire Pits, and opponents looking to send you back to the start!
 
-### Prerequisites
-- Java 17+  
-- JavaFX SDK  
-- (Optional) Maven or Gradle for dependency management
+## ✨ Features
 
-### Steps
-1. Clone this repository:
-   ```bash
-   git clone https://github.com/your-username/jackaroo.git
-2. Open the project in your IDE (Eclipse, IntelliJ, or VS Code).
-3. Make sure JavaFX is configured.
-4. Play and enjoy the game!
----
+* **Cosmic Theme:** Beautiful custom planetary textures, starry backgrounds, and fluid JavaFX UI animations.
+* **Advanced Card Mechanics:** Utilize standard cards for movement, or deploy Wild Cards (like the Burner and Saver) to completely alter the game state.
+* **Custom AI Opponents:** Play locally with friends, or challenge the built-in CPU opponents: *Rudeus*, *Frieren*, and *Übel*.
+* **Dynamic Board Hazards:** Navigate carefully around the Trap Cell and the Fire Pit.
+* **Immersive Audio:** Complete with an intro cinematic and ambient background music.
 
-## 🖼️ Screenshots
+## 📸 Screenshots
 
 ![Main Menu](screenshots/main-menu.png)
 ![Gameplay](screenshots/gameplay.png)
 ![Winning Scene](screenshots/winningscene.png)
 
+## 🎮 How to Play
 
----
+1. **Deploy:** Play specific cards (like a 13/King) to move a marble out of your Home Base onto the main track.
+2. **Navigate:** Use your hand of cards to move your marbles forward or backward.
+3. **Attack:** Land exactly on an opponent's marble to send them all the way back to their home!
+4. **Win:** Be the first player to maneuver all four of your marbles into the Safe Zone.
 
-## 👨‍💻 Team & Credits
+## 💻 Installation & Running
 
-Built with 💡 and a lot of passion by a 3-member developer team:
+### For Players (Windows)
+You do not need to install Java or any code to play the game!
+1. Go to the [Releases](../../releases) tab on the right side of this page.
+2. Download the latest `Jackaroo.exe` file.
+3. Double-click the file to launch. *(Note: Windows Defender may show a "SmartScreen" warning for indie apps. Click "More info" -> "Run anyway").*
 
+### For Developers
+To run this project from the source code:
+1. Clone the repository: `git clone https://github.com/mo7amed3nan/jackaroo.git`
+2. Open the project in IntelliJ IDEA.
+3. Ensure you have **Java 21 (Amazon Corretto)** and the **JavaFX SDK** configured in your Project Structure.
+4. Add the JavaFX VM options: `--module-path "path\to\javafx\lib" --add-modules javafx.controls,javafx.media,javafx.graphics,javafx.base`
+5. Run `View.java`.
+
+## 👨‍💻 Credits
 - **Mohamed Enan** – [LinkedIn](https://www.linkedin.com/in/mohamed-enan-1122ba306/)
 - **Mahmoud abohady** – [LinkedIn](https://www.linkedin.com/in/mahmoud-abohady/)
 - **Ahmed Reda** – [LinkedIn](https://www.linkedin.com/in/ahmed-reda-8084442b4/)
-
----
